<resources>
    <string name="app_name">LoginSignupExample</string>
    <string name="logo">logo</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="Others">Others</string>
    <string name="terms_and_conditions">I accept all terms and conditions.</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>

    <string-array name="nationality">
        <item>-- Select your nationality --</item>
        <item>Nepal</item>
        <item>India</item>
        <item>USA</item>
        <item>UK</item>
        <item>Other</item>
    </string-array>
</resources>